k8s/client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: ${NAMESPACE}
spec:
  ports:
  - port: 80  # The port the service is exposed on
    targetPort: 80  # The target port on the pods, should match SERVER
  selector:
    app: client

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: ${NAMESPACE}
spec:
  replicas: 2  # Adjust the number of replicas based on your needs
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: ${DOCKER_ORG}/${PROJECT_NAME}-client:${NAMESPACE}-${TAG}  # Replace with your actual image name
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80  # The port your application listens on, adjust if different
