k8s/hasura.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasura
  namespace: ${NAMESPACE}
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hasura

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasura
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hasura
  template:
    metadata:
      labels:
        app: hasura
    spec:
      containers:
      - name: hasura
        image: hasura/graphql-engine:v2.37.0
        ports:
        - containerPort: 8080
