k8s/storybook.yaml
apiVersion: v1
kind: Service
metadata:
  name: storybook
  namespace: ${NAMESPACE}
spec:
  ports:
  - port: 80  # The port the service is exposed on
    targetPort: 80  # The target port on the pods, should match SERVER
  selector:
    app: storybook

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: storybook
  namespace: ${NAMESPACE}
spec:
  replicas: 2  # Adjust the number of replicas based on your needs
  selector:
    matchLabels:
      app: storybook
  template:
    metadata:
      labels:
        app: storybook
    spec:
      containers:
      - name: storybook
        image: ${DOCKER_ORG}/${PROJECT_NAME}-client-storybook:${NAMESPACE}-${TAG}  # Replace with your actual image name
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80  # The port your application listens on, adjust if different
