k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ${NAMESPACE}
  annotations:
    cert-manager.io/issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - ${NAMESPACE}.client.${DOMAIN}
    - ${NAMESPACE}.hasura.${DOMAIN}
    - ${NAMESPACE}.server.${DOMAIN}
    - ${NAMESPACE}.storybook.${DOMAIN}
    secretName: ${NAMESPACE}-certificate
  rules:
  - host: ${NAMESPACE}.hasura.${DOMAIN}
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: hasura
            port:
              number: 80
  - host: ${NAMESPACE}.client.${DOMAIN}
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: client
            port:
              number: 80
  - host: ${NAMESPACE}.storybook.${DOMAIN}
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: storybook
            port:
              number: 80
  - host: ${NAMESPACE}.server.${DOMAIN}
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: server
            port:
              number: ${SERVER_PORT}
  ingressClassName: nginx
